--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "jest": {
-    "testPathIgnorePatterns": ["./src/database/**"]
+    "testPathIgnorePatterns": [
+      "./src/database/**"
+    ]
   },
   "scripts": {
     "dev": "nodemon src/server.ts",
@@ -14,11 +16,13 @@
     "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/mongoose": "^5.10.2",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
