--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,37 +11,16 @@ services:
       - .:/home/node/api
     environment:
       - MONGO_URL=movie-mongo
-      - REDIS_URL=movie-redis
     depends_on:
       - movie-mongo
-      - movie-redis
     networks:
       - movie-network
     links:
       - movie-mongo
-      - movie-redis
     container_name: movie-api
     command: yarn dev
     ports:
       - 3333:3333
-
-  movie-queue:
-    build: .
-    volumes:
-      - .:/home/node/api
-    environment:
-      - MONGO_URL=movie-mongo
-      - REDIS_URL=movie-redis
-    depends_on:
-      - movie-mongo
-      - movie-redis
-    networks:
-      - movie-network
-    links:
-      - movie-mongo
-      - movie-redis
-    container_name: movie-queue
-    command: yarn queue
 
   movie-mongo:
     image: bitnami/mongodb:latest
@@ -55,21 +34,6 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - /tmp/mongo:/bitnami
+      - ./tmp/mongo:/bitnami
     networks:
       - movie-network
-
-  movie-redis:
-    image: bitnami/redis:latest
-    container_name: movie-redis
-    restart: always
-    environment:
-      - ALLOW_EMPTY_PASSWORD=no
-      - REDIS_PASSWORD=${REDIS_PASS}
-    ports:
-      - "6379:6379"
-    volumes:
-      - /tmp/redis:/bitnami/redis/data
-    networks:
-      - movie-network
-
