--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     ]
   },
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "test": "jest --watch",
-    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
+    "dev:server": "ts-node-dev --inspect --respawn --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
+    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "start:server": "node dist/shared/infra/http/server.js",
+    "start:queue": "node dist/shared/infra/queue/runner.js",
+    "lint": "eslint src --ext ts",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/mongoose": "^5.10.2",
+    "@shelf/jest-mongodb": "^1.2.3",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -25,25 +25,37 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.5",
+    "mongodb-memory-server": "^6.9.2",
     "mongoose": "^5.11.4",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "tsyringe": "^4.4.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.16",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mocha": "^8.0.4",
+    "@types/mongoose": "^5.10.2",
     "@types/nodemon": "^1.19.0",
     "@types/supertest": "^2.0.10",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
-    "ts-node-dev": "^1.0.0-pre.60",
-    "typescript": "^4.0.2"
+    "ts-node": "^9.1.0",
+    "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.2"
   }
 }
