--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,30 @@
-
 {
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "noEmit": true,
-    "resolveJsonModule": true,
+    "allowJs": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "strictPropertyInitialization": false,
+    "moduleResolution": "node",
+    "baseUrl": "./src",
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "typeRoots": [
+      "../../node_modules/@types",
+      "src/@types"
+    ],
+    "paths": {
+      "@config/*": ["config/*"],
+      "@modules/*": ["modules/*"],
+      "@shared/*": ["shared/*"]
+    }
+  },
+  "include": ["src", "__tests__"]
 }
