--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,15 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
+    "types": [
+      "node",
+      "mocha",
+      "jest"
+    ],
     "typeRoots": [
       "../../node_modules/@types",
+      "../node_modules/@types",
+      "node_modules/@types",
       "src/@types"
     ],
     "paths": {
